# Qube

./: .gitignore  CGROUPS.md  CGROUP_FIXES.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  go.mod  go.sum  index.html  main.go  qubed.service
.github/: FUNDING.yml
.github/workflows/: Merge-M8.yml  go.yml  pages.yml  rust.yml
ContainerServer/: Cargo.toml  readme.md  rust-file-server.service
ContainerServer/src/: main.rs
buildIMG/: install_and_pack.sh
cmd/qube/: main.go
desktop/: README.md  REDESIGN_NOTES.md  SETUP_COMPLETE.md  install  main.js  package.json  preload.js  qube-desktop.desktop
desktop/assets/: README.md
desktop/renderer/: console.html  console.js  index.html.backup  script.js  styles.css
docs/: CGROUPS.md  Gemfile  _config.yml  index.md
docs/_layouts/: default.html
html/: console.html  index.html  script.js
hub/: .env.example  Makefile  README.md  go.mod  go.sum  main.go
hub/templates/: auth.html  explore.html  image.html  index.html  profile.html  settings.html  topbar.html
internal/api/: server.go  server_test.go
internal/cli/: cli.go  cli_test.go
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go  daemon_test.go
internal/testutil/: testpaths.go  testpaths_test.go
qube-apps/desktop/: .gitignore  QUICKSTART.md  README.md  (+3 more)
rootPage/: go.mod  index.html  main.go  readme.md
scripts/: README.md  build-go.fish  build-go.sh  convert_tar_gz_to_tar.sh  install_and_pack.sh  os_for_languages.sh  test_cgroup.fish
src/: api.rs  cgroup.rs  container.rs  daemon.rs  main.rs  tracking.rs
(+130 files in other folders)
