[package]
name = "Qube"
version = "0.1.2"
edition = "2021"

[dependencies]
nix = "0.26"
libc = "0.2"
colored = "3.0.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
warp = "0.3"
serde_json = "1.0"
futures = "0.3"