[package]
name = "image-service"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.12", features = ["macros", "fs", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.6", features = ["io"] }
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"

[[bin]]
name = "rust-file-server"
path = "src/main.rs"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'